style(footer): split tagline to two lines and fix logo centering
- Break footer tagline into two lines across index and contact pages
- Remove asymmetric padding-right that was off-centering the desc text
- Add flex centering to footer logo container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1203,16 +1203,12 @@ p {
 
 .footer .footer-widget .logo {
   margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .footer .footer-widget .desc {
   margin-bottom: 25px;
-}
-
-@media only screen and (min-width: 1400px) {
-  .footer .footer-widget .desc {
-    padding-right: 50px;
-  }
 }
 
 .footer .footer-widget .social-links {
